# bounce-relay

./: .env  .gitignore  Cargo.toml  README.md  settings.toml  settings.toml.sample  test-server.sh
.github/workflows/: ci.yml  release.yml
debian/: bounce-relay-worker.service
src/: db.rs  ingest.rs  main.rs  worker.rs
