[package]
name = "bounce-relay"
version = "0.2.0"
edition = "2024"
description = "Email-to-webhook relay service for Postfix bounce notifications"
license = "MIT"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive"] }
config = "0.15.19"
mail-parser = "0.11.1"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["any", "mysql", "postgres", "runtime-tokio", "sqlite"] }
tokio = { version = "1.49.0", features = ["full"] }
serde_json = "1.0.149"
sea-query = "0.32.7"
sea-query-binder = { version = "0.7.0", features = ["sqlx-postgres", "sqlx-sqlite", "sqlx-mysql", "sqlx-any", "with-time"] }
time = { version = "0.3.45", features = ["formatting", "std"] }
hmac = "0.12.1"
base64 = "0.22.1"
reqwest = "0.13.1"
sha2 = "0.10.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[package.metadata.deb]
maintainer = "Florian Krauthan <mail@fkrauthan.de>"
copyright = "2026, Florian Krauthan"
extended-description = "Email-to-webhook relay service for processing Postfix bounce notifications"
section = "mail"
priority = "optional"
assets = [
    ["target/release/bounce-relay", "usr/bin/", "755"],
    ["settings.toml.sample", "etc/bounce-relay/settings.toml.sample", "644"],
    ["debian/bounce-relay-worker.service", "lib/systemd/system/bounce-relay-worker.service", "644"]
]
conf-files = ["/etc/bounce-relay/settings.toml.sample"]
